# focus-time

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: critical-paths.spec.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_initial_schema.sql  0002_supporting_indexes.sql  0003_tracking_foundation.sql  0004_gamification_foundation.sql  0005_runtime_preferences.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/bootstrap/: mod.rs
apps/desktop/src-tauri/src/commands/: mod.rs  pomodoro.rs  runtime.rs  storage.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/services/: mod.rs  pomodoro.rs  runtime.rs  storage.rs  tracker.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/desktop/src/app/: App.tsx  AppShell.tsx  DesktopShell.tsx
apps/desktop/src/components/: ThemeSwitch.tsx
apps/desktop/src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Tabs.tsx  Tooltip.tsx
apps/desktop/src/features/gamification/: GamificationScreen.test.tsx  GamificationScreen.tsx
apps/desktop/src/features/history/: HistoryScreen.tsx
apps/desktop/src/features/pomodoro/: FocusScreen.tsx
apps/desktop/src/features/settings/: SettingsScreen.tsx
apps/desktop/src/features/stats/: StatsScreen.test.tsx  StatsScreen.tsx
apps/desktop/src/features/tracking/: TrackerScreen.tsx
apps/desktop/src/hooks/: useApplyTheme.ts  useHydrateDesktopPreferences.ts  usePomodoroBridge.ts  usePomodoroNotifications.ts
apps/desktop/src/lib/: desktop-api.ts  pomodoro.ts  storage.ts  tauri.ts
apps/desktop/src/routes/: index.ts
apps/desktop/src/stores/: pomodoro-preferences-store.ts  pomodoro-store.ts  theme-store.ts
apps/desktop/src/styles/: index.css
apps/desktop/src/tests/: app.test.tsx  setup.ts
apps/desktop/src/types/: pomodoro.ts  runtime.ts  storage.ts
crates/focus-domain/: Cargo.toml
crates/focus-domain/src/: gamification.rs  lib.rs  models.rs  pomodoro.rs
crates/focus-persistence/: Cargo.toml
crates/focus-persistence/src/: connection.rs  lib.rs  migrations.rs  repositories.rs  schema.rs  seed.rs  tests.rs
crates/focus-stats/: Cargo.toml
crates/focus-stats/src/: lib.rs
crates/focus-tracking/: Cargo.toml
crates/focus-tracking/src/: lib.rs
docs/: project-blueprint.md  working-rules.md
scripts/: sign-desktop.sh
