[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/focus-domain",
  "crates/focus-persistence",
  "crates/focus-stats",
  "crates/focus-tracking"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Palawizard"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
