[package]
name = "focus-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
focus-domain = { path = "../focus-domain" }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.23"
tokio.workspace = true
