[package]
name = "focus-tracking"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
focus-domain = { path = "../focus-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
